# gfStory

./: .eslintrc.cjs  .gitignore  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  simulator.html  tsconfig.app.json  viewer.html  vite.config.ts  wrangler.toml
.github/workflows/: build.yml
public/: _headers  sample.lua
src/: App.vue  StorySimulator.vue  editor.ts  main.ts  simulator.ts  viewer.ts
src/components/: LineList.vue  MediaSelector.vue  StoryList.vue  StoryPreview.vue  StoryScene.vue  StoryTeller.vue
src/components/character/: CharacterList.vue  CharacterListSelector.vue  CharacterSelector.vue  CharacterSettings.vue
src/components/lines/: LineList.vue  MediaSelector.vue  OptionLineView.vue  SceneLineView.vue  SpriteSelector.vue  StoryLineView.vue  TextLineView.vue  editor.css  editor.ts
src/db/: media.ts
src/gfunpack/: audio.py  backgrounds.py  characters.py  mapper.py  prefabs.py  utils.py
src/story/: compiler.ts  interpreter.ts
src/types/: assets.ts  character.ts  lines.ts
test/: gf-graph.test.ts  gf-stories.test.ts  mini-index.ts  pagefind-index.ts
tests/: test_audio.py  test_backgrounds.py  test_mapper.py  test_prefabs.py
unpack/: .gitignore  README.md  downloader.patch  pyproject.toml
unpack/src/gfunpack/: __main__.py  audio.py  backgrounds.py  chapters.py  characters.py  database.py  manual_chapters.py  mapper.py  prefabs.py  stories.py  utils.py
unpack/tests/: test_audio.py  test_backgrounds.py  test_characters.py  test_database.py  test_mapper.py  test_prefabs.py  test_stories.py
(+13 files in other folders)
